# multi-NUS

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  app.overlay  prj.conf  prj_cdc.conf  usb.overlay
src/: main.c  main_new.c  uart_async_adapter.c  uart_async_adapter.h
